--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nemo Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Decorative floating hearts -->
@@ -15,27 +15,31 @@
     <div id="start-screen" class="screen">
       <h1>Nemo Game</h1>
       <p class="game-description">
-        Hứng những trái tim rơi xuống để ghi điểm. Cố gắng đạt điểm cao nhất!
+        Catch the hearts to score points. Try to get the highest score!
       </p>
       <div class="controls">
-        Di chuyển giỏ đựng bằng phím <span>← (trái)</span> và
-        <span>→ (phải)</span>
+        Move the basket using the <span>← (left)</span> and
+        <span>→ (right)</span> keys
       </div>
-      <button id="start-button">Bắt Đầu</button>
+      <button id="start-button">Start</button>
     </div>
 
-    <!-- Game Screen -->
     <div id="game-screen" class="screen hidden">
       <div class="header">
-        <div id="score">Điểm: 0</div>
+        <div id="score">Score: 0</div>
+        <div class="level-indicator">
+          Level: <span id="level-text">1</span>
+          <div class="level-bar">
+            <div class="level-progress" id="level-progress"></div>
+          </div>
+        </div>
         <div id="heart">Heart: 5</div>
       </div>
       <canvas id="gameCanvas"></canvas>
-      <div class="level-indicator">
-        Level: <span id="level-text">1</span>
-        <div class="level-bar">
-          <div class="level-progress" id="level-progress"></div>
-        </div>
+
+      <div class="controls-mobile">
+        <button id="left-button">←</button>
+        <button id="right-button">→</button>
       </div>
     </div>
 
@@ -46,13 +50,8 @@
       <div id="high-score-container">
         High Score: <span id="high-score">0</span>
       </div>
-      <button id="restart-button">Chơi Lại</button>
+      <button id="restart-button">Restart</button>
     </div>
-
-    <!-- Audio Elements -->
-    <audio id="catch-sound" src="sounds/catch.mp3"></audio>
-    <audio id="miss-sound" src="sounds/miss.mp3"></audio>
-    <audio id="bg-music" src="sounds/background.mp3" loop></audio>
 
     <script src="game.js"></script>
   </body>
