--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="level-progress" id="level-progress"></div>
           </div>
         </div>
-        <div id="heart">Heart: 5</div>
+        <div id="heart">5</div>
       </div>
       <canvas id="gameCanvas"></canvas>
 
