--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       </div>
       <canvas id="gameCanvas"></canvas>
 
-      <div class="controls-mobile">
+      <!-- <div class="controls-mobile">
         <button id="left-button">←</button>
         <button id="right-button">→</button>
-      </div>
+      </div> -->
     </div>
 
     <!-- Game Over Screen -->
